--- a/NotificadoR/NotificadoR.Angular/app/admin/admin.html
+++ b/NotificadoR/NotificadoR.Angular/app/admin/admin.html
@@ -5,7 +5,7 @@
                 <div class="widget wviolet">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
-                        <h3>TODO: Implement Your Features</h3>
+                        <h3>Insert new document</h3>
                     </div>
                     <div class="widget-foot">
                         <div class="clearfix"></div>
