--- a/NotificadoR/NotificadoR.Angular/index.html
+++ b/NotificadoR/NotificadoR.Angular/index.html
@@ -59,6 +59,9 @@
     <script src="scripts/moment.js"></script>
     <script src="scripts/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="scripts/spin.js"></script>
+    <script src="scripts/jquery.signalR-2.1.2.min.js"></script>
+    <script src='signalr/hubs'></script>
+
 
     <!-- Bootstrapping -->
     <script src="app/app.js"></script>
