--- a/NotificadoR/NotificadoR.HTML/index.html
+++ b/NotificadoR/NotificadoR.HTML/index.html
@@ -1,41 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset='utf-8' />
-        <title>NotificadoR</title>
-        <link href="content/styles.css" rel="stylesheet" />
-        <link href="content/toastr.min.css" rel="stylesheet" />
-        <link href="content/bootstrap-theme.min.css" rel="stylesheet" />
-        <meta name='viewport' content='width=device-width' />
-        <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script><![endif]-->
-    </head>
-    <body>
-        <div id='wrapper'>
-            <article>
-                <header>
-                    <h2>NotificadoR</h2>
+<head>
+    <meta charset='utf-8' />
+    <title>Todo list: NotificadoR</title>
+    <link rel='stylesheet' href='content/styles.css' />
+    <meta name='viewport' content='width=device-width' />
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script><![endif]-->
+</head>
+<body>
+    <div id='wrapper'>
+        <article>
+            <header>
+                <h2>NotificadoR</h2>
+       
+                <form id='add-item'>
+                    <button type='submit'>Add</button>
+                    <div><input type='text' id='new-item-text' placeholder='Enter new task' /></div>
+                </form>
+            </header>
 
-                    <form id='add-item'>
-                        <button type='submit'>Add</button>
-                        <div>
-                            <input type='text' id='new-item-title' placeholder='Title' />
-                            <input type='text' id='new-item-abstract' placeholder='Abstract' />
-                        </div>
-                    </form>
-                </header>
+            <ul id='todo-items'></ul>
+            <p id='summary'>Loading...</p>
+        </article>
 
-                <ul id='todo-items'></ul>
-                <p id='summary'>Loading...</p>
-            </article>
-        </div>
+        <footer>
+            <ul id='errorlog'></ul>
+        </footer>
+    </div>
 
-
-        <script src="Scripts/jquery-2.1.1.min.js"></script>
-        <script src="Scripts/bootstrap.min.js"></script>
-        <script src='http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.2.min.js'></script>
-        <script src="Scripts/jquery.signalR-2.1.2.min.js"></script>
-        <script src="Scripts/toastr.min.js"></script>
-        <script src='/signalr/hubs'></script>
-        <script src='page.js'></script>
-    </body>
+    <script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js'></script>
+    <script src='http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.5.min.js'></script>
+    <script src='page.js'></script>
+</body>
 </html>
