SignalR integrated and realtime data update verified

--- a/NotificadoR/NotificadoR.HTML/index.html
+++ b/NotificadoR/NotificadoR.HTML/index.html
@@ -27,9 +27,11 @@
             <ul id='errorlog'></ul>
         </footer>
     </div>
-
-    <script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js'></script>
+    <script src="Scripts/jquery-2.1.1.min.js"></script>
     <script src='http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.5.min.js'></script>
+    <script src="Scripts/jquery.signalR-2.1.2.min.js"></script>
+    <script src="Scripts/toastr.min.js"></script>
+    <script src='/signalr/hubs'></script>
     <script src='page.js'></script>
 </body>
 </html>
