--- a/NotificadoR/NotificadoR.Angular/index.html
+++ b/NotificadoR/NotificadoR.Angular/index.html
@@ -50,7 +50,7 @@
     <!-- Vendor Scripts -->
     <script src="scripts/jquery-2.1.1.js"></script>
     <script src="scripts/jquery.signalR-2.1.2.min.js"></script>
-    <script src="/signalr/hubs"></script>
+    <script src="signalr/hubs"></script>
     <script src='http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.2.min.js'></script>
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-animate.js"></script>
