--- a/NotificadoR/NotificadoR.Angular/app/admin/admin.html
+++ b/NotificadoR/NotificadoR.Angular/app/admin/admin.html
@@ -6,6 +6,18 @@
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
                         <h3>Insert new document</h3>
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="title">Title</label>
+                                <input type="text" class="form-control" id="title" placeholder="Enter title" ng-model="vm.documentTitle"> 
+                                {{title}}
+                            </div>
+                            <div class="form-group">
+                                <label for="abstract">Abstract</label>
+                                <input type="text" class="form-control" id="abstract" placeholder="Abstract" ng-model="vm.documentAbstract">
+                            </div>
+                            <button type="submit" class="btn btn-default" ng-click="vm.submit()">Submit</button>
+                        </form>
                     </div>
                     <div class="widget-foot">
                         <div class="clearfix"></div>
