--- a/NotificadoR/NotificadoR.Angular/app/dashboard/dashboard.html
+++ b/NotificadoR/NotificadoR.Angular/app/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <section class="matter">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <div class="widget wviolet">
                         <div data-cc-widget-header="" title="Documents"
                              data-allow-collapse="true"></div>
@@ -29,6 +29,30 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="col-md-6">
+                    <div class="widget wviolet">
+                        <div data-cc-widget-header title="New Document"></div>
+                        <div class="widget-content user">
+                            <form role="form">
+                                <div class="form-group">
+                                    <label for="title">Title</label>
+                                    <input type="text" class="form-control" id="title" placeholder="Enter title" ng-model="vm.documentTitle">
+                                    {{title}}
+                                </div>
+                                <div class="form-group">
+                                    <label for="abstract">Abstract</label>
+                                    <input type="text" class="form-control" id="abstract" placeholder="Abstract" ng-model="vm.documentAbstract">
+                                </div>
+                                <button type="submit" class="btn btn-default" ng-click="vm.submit()">Submit</button>
+                            </form>
+                        </div>
+                        <div class="widget-foot">
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
