--- a/NotificadoR/NotificadoR.Angular/index.html
+++ b/NotificadoR/NotificadoR.Angular/index.html
@@ -77,14 +77,13 @@
     <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
 
     <!-- app -->
-    <script src="app/admin/admin.js"></script>
+    //<script src="app/admin/admin.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
-    <script src="app/services/notificationcontext.js"></script>
     <script src="app/services/directives.js"></script>
 </body>
 </html>
