--- a/NotificadoR/NotificadoR.Angular/app/dashboard/dashboard.html
+++ b/NotificadoR/NotificadoR.Angular/app/dashboard/dashboard.html
@@ -11,14 +11,14 @@
                                 <thead>
                                     <tr>
                                         <th>Title</th>
-                                        <th>Abstract</th>
+                                        <!--<th>Abstract</th>-->
                                         <th>Complete</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr data-ng-repeat="t in vm.toDoItems">
                                         <td>{{t.text}}</td>
-                                        <td>{{t.abstract}}</td>
+                                        <!--<td>{{t.abstract}}</td>-->
                                         <td>{{t.complete}}</td>
                                     </tr>
                                 </tbody>
